--- a/index.html
+++ b/index.html
@@ -9,7 +9,36 @@
   <script defer src="script.js"></script>
 </head>
 <body>
-
+  <main>
+    <div class="title">
+      <h1>Learn to code by watching others</h1>
+    </div>
+    <div class="article">
+      <article>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+        but understanding how developers think is invaluable. 
+        </article>
+    </div>
+      <div class="blue-background">
+        <div class="blue">
+          <p> <span>Try it free 7 days</span> then $20/mo. thereafter</p>
+        </div>
+      </div>
+      <div class="input-field">
+        <div class="input">
+          <div class="input-name">
+            <div class="name">
+              <input type="text" name="name" placeholder="First Name"> <div class="icon hide">
+                <img src="images/icon-error.svg" alt="">
+              </div>
+            </div>
+            <div class="error hide">fghfghfghfh</div>
+          </div>
+          <div class="input-email">
+            <div class="email"></div>
+          </div>
+        </div>
+      </div>    
+  </main>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
